# mcpknowedge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_mcp.sh
.agents/: AGENTS.md
.numtemaflow/: changelog.md  decisions.md  gor_state.json  handoff.md  i2e_workflow.md  notes.md  project_brief.md  project_state.json  resources.md  risks.md  session_resume.md  tasks.md  verification.md
app/: __init__.py  api.py  chunking.py  config.py  db.py  dependencies.py  embeddings.py  extractors.py  main.py  mcp_server.py  models.py  services.py  vector_store.py
app/static/: index.html
data/uploads/: 06f3ee21-b627-4f44-b79c-cbe6adc836a8.txt
numtema_private_knowledge_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunking.py  test_extractors.py
